<resources>
    <string name="app_name">PetReg</string>
    <string name="register">Зарегистрировать</string>
    <string name="info">Информация</string>
    <string name="map">Карта</string>
    <string name="id">Идентификатор</string>
    <string name="name">Имя</string>
    <string name="message_write_success">Тег успешно записан</string>
    <string name="message_tag_detected">NFC метка обнаружена</string>
    <string name="age">Возраст</string>
    <string name="fio">ФИО</string>
    <string name="address">Адрес</string>
    <string name="tel">Телефон</string>
    <string name="date">Дата</string>
    <string name="vaccine">Прививки:</string>
    <string name="pet_info">Информация о животном</string>
    <string name="birth">Год рождения</string>
    <string name="reg_pet">Зарегистрировать животное</string>
    <string name="title">Название</string>
    <string name="no_record">Записей на метке нет!</string>
    <string name="repeat_write">Пожалуйста, попробуйте произвести записть еще раз</string>
    <string name="record">Записать</string>
    <string name="message_before_write">Введите данные в поля, нажмите кнопку \'Записать\', после появления поля идентификатора приложете телефон к NFC-метке для записи</string>
    <string name="message_before_read">Приложите телефон к NFC-метке для чтения данных</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="title_read_dialog">Чтение данных</string>
    <string name="title_write_dialog">Запись сообщения</string>
    <string name="not_null_name">Имя не должно быть пустым!</string>
    <string name="wrong_birth">Год рождения не соответсвует действительности!</string>
    <string name="not_null_fio">ФИО не должно быть пустым!</string>
    <string name="not_null_address">Адрес не должен быть пустым!</string>
    <string name="not_null_tel">Телефон не должен быть пустым!</string>
    <string name="not_write_to_db">Запись в базу не осуществлена: </string>
    <string name="not_read_from_db">Чтение из базы не удалось: </string>
    <string name="err_read_tag">Чтение метки не удалось</string>
    <string name="fcm_message">Координаты вашего животного: </string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>