<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="info fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/id_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/id"/>

    <TextView
        android:id="@+id/name_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>

    <TextView
        android:id="@+id/age_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/age"/>

    <TextView
        android:id="@+id/fio_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fio"/>

    <TextView
        android:id="@+id/address_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/address"/>

    <TextView
        android:id="@+id/tel_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tel"/>

</LinearLayout>